3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/map.c: Modify ob_blocked() to properly handly objects with a 0
   ob->move_type.  Fixes infinite loop from random map code when trying
   to place exits.
MSW 2006-02-16

Commit forgotten file for yesterday, which have the CFAPI_INT16 define...
 include/plugin.h
 server/plugins.c
Ryo 2006-02-15

Minor bugfixes:
server/apply.c: Fix apply_transport ->contr checks to actually
  check against correct values.
server/plugins.c: Replace CFAPI_INT16 with CFAPI_INT - there is no
  declaration anyplace for CFAPI_INT16 so compiles fails.
server/swamp.c: Fix swamp code so that only objects that can be
  picked up disappear - this way, transports don't disappear into
  oblivion.
MSW 2006-02-15

Swamps don't affect DMs anymore. Also, swamps don't remove items with
FLAG_IS_FLOOR or FLAG_IS_OVERLAY_FLOOR.
 server/swamp.c
----
Fixes to plugin system. Added "SINT16" as return type.
 server/plugins.c: resistances are sint16, not int.
 plugins/cfanim/include/cfanim_proto.h: fix cf_object_get_resistance declaration.
 plugins/cfpython/cfpython_archetype.c: fix comparison function, which should return 0 or +-1.
 plugins/cfpython/cfpython_map.c: fix comparison function.
 plugins/cfpython/cfpython_object.c: fix broken GetResist, fix comparison function.
 plugins/cfpython/cfpython_party.c: fix comparison function.
 plugins/cfpython/cfpython_region.c: fix comparison function.
 plugins/common/plugin_common.c: object resistances are sint16.
 plugins/common/include/plugin_common.h: object resistances are sint16.
Ryo 2006-02-14

Apply modified patch #1428048 (make the log line buffered) by Marc Lehmann.
---